--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
       "bootstrap": "^4.5.3",
       "firebase": "^8.0.1",
       "react": "^17.0.1",
+      "react-bootstrap": "^1.4.0",
       "react-dom": "^17.0.1",
+      "react-lottie": "^1.2.3",
       "react-redux": "^7.2.2",
       "react-router-dom": "^5.2.0",
       "react-scripts": "4.0.0",
@@ -46,5 +48,8 @@
          "last 1 firefox version",
          "last 1 safari version"
       ]
+   },
+   "devDependencies": {
+      "babel-plugin-module-resolver": "^4.1.0"
    }
 }
