--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@toast-ui/react-editor": "^2.5.1",
     "bootstrap": "^4.5.3",
     "firebase": "^8.0.1",
+    "node-sass": "^4.14.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
