--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@toast-ui/react-editor": "^2.5.1",
     "bootstrap": "^4.5.3",
+    "emailjs-com": "^2.6.4",
     "firebase": "^8.0.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
