--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@toast-ui/react-editor": "^2.5.1",
     "bootstrap": "^4.5.3",
     "emailjs-com": "^2.6.4",
-    "firebase": "^8.0.1",
+    "firebase": "^8.2.6",
+    "firebase-tools": "^9.3.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
