deploy firebase, Github actions

--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,7 @@
       }
     ]
   },
-  "storage": {
-    "rules": "storage.rules"
+  "remoteconfig": {
+    "template": "remoteconfig.template.json"
   }
 }
